--- a/scss/_utilities.scss
+++ b/scss/_utilities.scss
@@ -538,6 +538,8 @@ $utilities: map-merge(
           "muted": $text-muted,
           "black-50": rgba($black, .5), // deprecated
           "white-50": rgba($white, .5), // deprecated
+          "body-secondary": var(--#{$variable-prefix}secondary-color),
+          "body-tertiary": var(--#{$variable-prefix}tertiary-color),
           "reset": inherit,
         )
       )
@@ -563,7 +565,9 @@ $utilities: map-merge(
       values: map-merge(
         $utilities-bg-colors,
         (
-          "transparent": transparent
+          "transparent": transparent,
+          "body-secondary": rgba(var(--#{$variable-prefix}secondary-bg-rgb), var(--#{$variable-prefix}bg-opacity)),
+          "body-tertiary": rgba(var(--#{$variable-prefix}tertiary-bg-rgb), var(--#{$variable-prefix}bg-opacity)),
         )
       )
     ),
