--- a/site/assets/scss/_content.scss
+++ b/site/assets/scss/_content.scss
@@ -30,8 +30,10 @@
   }
 
   // Override Bootstrap defaults
-  > .table,
-  > .table-responsive .table {
+  > .table {
+    --bs-table-border-color: var(--bs-border-color);
+
+    max-width: 100%;
     margin-bottom: 1.5rem;
     @include font-size(.875rem);
 
@@ -78,6 +80,10 @@
 .table-options td:last-child,
 .table-utilities td:last-child {
   min-width: 280px;
+
+  .table-swatches {
+  td:first-child { width: 340px; }
+  td:nth-child(2) { width: 200px; }
 }
 
 .bd-title {
@@ -96,7 +102,8 @@
 .bi {
   width: 1em;
   height: 1em;
-  fill: currentcolor;
+  vertical-align: -.125em;
+  fill: currentColor;
 }
 
 .icon-link {
@@ -124,3 +131,28 @@
     border-left: $border-width solid $border-color;
   }
 }
+
+// scss-docs-start custom-color-mode
+[data-theme="blue"] {
+  --bs-body-color: var(--bs-white);
+  --bs-body-color-rgb: #{to-rgb($white)};
+  --bs-body-bg: var(--bs-blue);
+  --bs-body-bg-rgb: #{to-rgb($blue)};
+  --bs-tertiary-bg: #{$blue-600};
+
+  .dropdown-menu {
+    --bs-dropdown-link-active-bg: #{$blue-700};
+  }
+
+  .btn-secondary {
+    --bs-btn-bg: #{mix($gray-600, $blue-400, .5)};
+    --bs-btn-border-color: #{rgba($white, .25)};
+    --bs-btn-hover-bg: #{darken(mix($gray-600, $blue-400, .5), 5%)};
+    --bs-btn-hover-border-color: #{rgba($white, .25)};
+    --bs-btn-active-bg: #{darken(mix($gray-600, $blue-400, .5), 10%)};
+    --bs-btn-active-border-color: #{rgba($white, .5)};
+    --bs-btn-focus-border-color: #{rgba($white, .5)};
+    --bs-btn-focus-box-shadow: 0 0 0 .25rem rgba(255, 255, 255, .2);
+  }
+}
+// scss-docs-end custom-color-mode
