--- a/site/layouts/partials/docs-navbar.html
+++ b/site/layouts/partials/docs-navbar.html
@@ -84,6 +84,21 @@
           </li>
           {{ partial "docs-versions" . }}
         </ul>
+
+        <hr class="d-md-none text-white-50">
+
+        <div class="vr d-none d-lg-flex ms-lg-2 me-lg-3 my-lg-1"></div>
+
+        <div class="d-flex flex-row-reverse flex-lg-row">
+          <label class="bd-theme-toggle align-self-center ms-auto me-lg-1" title="Toggle mode">
+            <input type="checkbox" class="bd-theme-toggle-checkbox" id="checkbox">
+            <div class="visually-hidden">Toggle mode</div>
+            <svg class="bd-theme-toggle-dark bi"><use xlink:href="#moon-stars-fill"></use></svg>
+            <svg class="bd-theme-toggle-light bi"><use xlink:href="#sun-fill"></use></svg>
+          </label>
+
+          <a class="btn btn-bd-accent d-lg-inline-block my-2 my-md-0 ms-md-3" href="/docs/{{ .Site.Params.docs_version }}/getting-started/download/">Download</a>
+        </div>
       </div>
     </div>
   </nav>
