Add dark mode support
Heavily WIP still, but this begins the process of implementing dark mode for our docs and across the project itself.

- Color modes are toggled in the docs navbar with a custom toggler, which stores the select color mode in local storage.
- Color modes can also be set via data attribute thanks to `data-theme` (with light or dark options available currently).
- Docs are heavily WIP for demonstrating the dark mode.
- In order to best implement color modes, I've spiked out a number of new Sass and CSS variables (e.g., `--bs-secondary-bg` and `--bs-tertiary-bg`). In addition, I've added new global CSS variables like `--bs-border-color` and more. So, in addition to general color modes and theming support, we get greater real-time customization, too.

Todos and open questions:

- [ ] Do we refer to these as themes or color modes?
- [ ] Do we provide a color mode toggler JS plugin?
- [ ] Update all components to better utilize global CSS variables so they can be more easily themed (e.g., see `$dropdown-*` Sass variable changes in the diff).

--- a/site/assets/scss/_content.scss
+++ b/site/assets/scss/_content.scss
@@ -31,6 +31,8 @@
 
   // Override Bootstrap defaults
   > .table {
+    --bs-table-border-color: var(--bs-border-color);
+
     max-width: 100%;
     margin-bottom: 1.5rem;
     @include font-size(.875rem);
@@ -74,6 +76,11 @@
   min-width: 280px;
 }
 
+.table-swatches {
+  td:first-child { width: 340px; }
+  td:nth-child(2) { width: 200px; }
+}
+
 .bd-title {
   @include font-size(3rem);
 }
@@ -83,8 +90,8 @@
   font-weight: 300;
 }
 
-.bd-text-purple-bright {
-  color: $bd-violet;
+.bd-text-violet {
+  color: var(--bd-violet);
 }
 
 .bd-bg-purple-bright {
@@ -94,6 +101,7 @@
 .bi {
   width: 1em;
   height: 1em;
+  vertical-align: -.125em;
   fill: currentColor;
 }
 
