--- a/site/layouts/partials/home/masthead-followup.html
+++ b/site/layouts/partials/home/masthead-followup.html
@@ -1,4 +1,4 @@
-<div class="container-xxl bd-gutter masthead-followup">
+<div class="container bd-gutter masthead-followup">
   <div class="col-lg-7 mx-auto pb-3 mb-3 mb-md-5 text-md-center">
     <div class="masthead-followup-icon d-inline-block mb-3" style="color: var(--bs-indigo);">
       <svg class="bi fs-1"><use xlink:href="#code"></use></svg>
@@ -290,7 +290,7 @@ $utilities: map-merge(
 
   <section class="row g-3 g-md-5 pb-md-5 mb-5 align-items-center">
     <div class="col-lg-6">
-      <div class="masthead-followup-icon d-inline-block mb-3 bd-text-purple-bright">
+      <div class="masthead-followup-icon d-inline-block mb-3 bd-text-violet">
         {{ partial "icons/circle-square.svg" (dict "width" "32" "height" "32") }}
       </div>
       <h2 class="display-5 mb-3 fw-semibold lh-sm">Personalize it with Bootstrap&nbsp;Icons</h2>
