--- a/site/layouts/_default/single.html
+++ b/site/layouts/_default/single.html
@@ -1,6 +1,6 @@
 {{ define "main" }}
   <header class="py-5 border-bottom">
-    <div class="container pt-md-1 pb-md-4">
+  <div class="container-xxl bd-gutter pt-md-1 pb-md-4">
       <div class="row">
         <div class="col-xl-8">
           <h1 class="bd-title mt-0">{{ .Title | markdownify }}</h1>
@@ -25,7 +25,7 @@
   </header>
 
   <main class="bd-content order-1 py-5" id="content">
-    <div class="container">
+    <div class="container-xxl bd-gutter">
       {{ .Content }}
 
       {{ if eq .Title "Examples" }}
