--- a/site/layouts/partials/home/masthead.html
+++ b/site/layouts/partials/home/masthead.html
@@ -1,5 +1,5 @@
 <div class="bd-masthead mb-3" id="content">
-  <div class="container-xxl">
+  <div class="container-xxl bd-gutter">
     <div class="col-md-8 mx-auto text-center">
       <a class="d-block d-sm-inline-block py-2 px-3 mb-4 text-dark text-decoration-none rounded-3 masthead-notice" href="https://blog.getbootstrap.com/2021/08/04/bootstrap-5-1-0/">
         <strong>New in v5.1:</strong> CSS Grid, offcanvas navbars, improved utilities, and more!
