--- a/site/layouts/partials/docs-navbar.html
+++ b/site/layouts/partials/docs-navbar.html
@@ -94,7 +94,7 @@
 
           <li class="nav-item dropdown">
             <a href="#" class="nav-link py-2 px-0 px-lg-2 dropdown-toggle d-flex align-items-center" id="bd-theme" data-bs-toggle="dropdown" aria-expanded="false" data-bs-display="static">
-              <svg class="bi my-1"><use href="#circle-half"></use></svg>
+              <svg class="bi my-1 theme-icon-active"><use href="#circle-half"></use></svg>
               <span class="d-lg-none ms-2">Toggle theme</span>
             </a>
             <ul class="dropdown-menu dropdown-menu-end bd-theme-toggles" aria-labelledby="bd-theme" style="--bs-dropdown-min-width: 8rem;">
@@ -112,8 +112,8 @@
                   <svg class="bi ms-auto d-none"><use href="#check2"></use></svg>
                 </button>
               </li>
-              <li class="current">
-                <button type="button" class="dropdown-item d-flex align-items-center" data-theme-value="auto">
+              <li>
+                <button type="button" class="dropdown-item d-flex align-items-center active" data-theme-value="auto">
                   <svg class="bi me-2 opacity-50 theme-icon"><use href="#circle-half"></use></svg>
                   Auto
                   <svg class="bi ms-auto d-none"><use href="#check2"></use></svg>
@@ -122,19 +122,6 @@
             </ul>
           </li>
         </ul>
-
-        <!-- <hr class="d-md-none text-white-50"> -->
-
-        <!-- <div class="vr d-none d-lg-flex mx-lg-2 my-lg-1 text-white"></div>
-
-        <div class="d-flex flex-row-reverse flex-lg-row">
-          <label class="bd-theme-toggle align-self-center ms-auto p-2" data-bs-toggle="tooltip" data-bs-placement="bottom" title="Toggle mode">
-            <input type="checkbox" class="bd-theme-toggle-checkbox" id="checkbox">
-            <div class="visually-hidden">Toggle mode</div>
-            <svg class="bd-theme-toggle-dark bi"><use xlink:href="#moon-stars-fill"></use></svg>
-            <svg class="bd-theme-toggle-light bi"><use xlink:href="#sun-fill"></use></svg>
-          </label>
-        </div> -->
       </div>
     </div>
   </nav>
