tweak design elsewhere

--- a/site/assets/scss/_navbar.scss
+++ b/site/assets/scss/_navbar.scss
@@ -78,12 +78,12 @@
     @include border-radius(.5rem);
     box-shadow: $dropdown-box-shadow;
 
+    li + li {
+      margin-top: .125rem;
+    }
+
     .dropdown-item {
       @include border-radius(.25rem);
-
-      + .dropdown-item {
-        margin-top: .125rem;
-      }
 
       &:active {
         .bi {
