--- a/site/assets/scss/_component-examples.scss
+++ b/site/assets/scss/_component-examples.scss
@@ -98,7 +98,7 @@
     @include border-top-radius(.25rem);
 
     + .bd-clipboard + .highlight {
-      @include border-bottom-radius(.25rem);
+      @include border-top-radius(0);
     }
   }
 
@@ -321,6 +321,7 @@
 
   @include media-breakpoint-up(md) {
     padding: .75rem 1.5rem;
+    @include border-radius(.375rem);
   }
 
   pre {
