fix some docs colors

--- a/site/assets/scss/_clipboard-js.scss
+++ b/site/assets/scss/_clipboard-js.scss
@@ -40,6 +40,8 @@
 }
 
 .highlight-toolbar {
+  background-color: var(--bs-tertiary-bg);
+
   .btn-clipboard {
     margin-top: 0;
     margin-right: 0;
