--- a/site/assets/scss/_component-examples.scss
+++ b/site/assets/scss/_component-examples.scss
@@ -204,7 +204,7 @@
 }
 
 .bd-example-modal {
-  background-color: #fafafa;
+  background-color: var(--bs-secondary-bg);
 
   .modal {
     position: static;
