--- a/site/layouts/partials/scripts.html
+++ b/site/layouts/partials/scripts.html
@@ -4,38 +4,22 @@
   <script src="/docs/{{ .Site.Params.docs_version }}/dist/js/bootstrap.bundle.js"></script>
 {{- end }}
 
-{{ if eq .Page.Layout "docs" -}}
-<script src="https://cdn.jsdelivr.net/npm/@docsearch/js@3"></script>
-<script src="https://cdn.jsdelivr.net/npm/@stackblitz/sdk@1/bundles/sdk.umd.js"></script>
-{{- end }}
+{{- $docsJs := resources.Get "js/main.js" -}}
 
-{{- $vendor := resources.Match "js/vendor/*.js" -}}
-{{- $js := resources.Match "js/*.js" -}}
-{{- $targetDocsJSPath := path.Join "/docs" .Site.Params.docs_version "assets/js/docs.js" -}}
-{{- $docsJs := append $js $vendor | resources.Concat $targetDocsJSPath -}}
+{{ if eq hugo.Environment "development" -}}
+{{ $docsJs = $docsJs | js.Build (dict "format" "esm" "sourceMap" "inline") -}}
+{{ else -}}
+{{ $docsJs = $docsJs | js.Build (dict "format" "esm" "minify" true) | fingerprint -}}
+{{ end -}}
 
-{{- if eq hugo.Environment "production" -}}
-  {{- $docsJs = $docsJs | resources.Minify -}}
-{{- end }}
 
-<script src="{{ $docsJs.Permalink | relURL }}"></script>
+
+<script src="{{ $docsJs.Permalink | relURL }}" defer></script>
 
 {{ if eq .Page.Layout "docs" -}}
 <script>
-  // Open in StackBlitz logic
-  document.querySelectorAll('.btn-edit').forEach(btn => {
-    btn.addEventListener('click', event => {
-      const htmlSnippet = event.target.closest('.bd-code-snippet').querySelector('.bd-example').innerHTML
 
-      // Get extra classes for this example
-      const classes = Array.from(event.target.closest('.bd-code-snippet').querySelector('.bd-example').classList).join(' ')
-
-      const jsSnippet = event.target.closest('.bd-code-snippet').querySelector('.btn-edit').getAttribute('data-sb-js-snippet')
-      StackBlitzSDK.openBootstrapSnippet(htmlSnippet, jsSnippet, classes)
-    })
-  })
-
-  StackBlitzSDK.openBootstrapSnippet = (htmlSnippet, jsSnippet, classes) => {
+  openBootstrapSnippet = (htmlSnippet, jsSnippet, classes) => {
     const markup = `<!doctype html>
 <html lang="en">
   <head>
@@ -55,7 +39,7 @@ ${htmlSnippet.replace(/^/gm, '    ')}
 </html>`
 
     const jsSnippetContent = jsSnippet ? '{{ os.ReadFile "site/assets/js/snippets.js" }}' : null
-    const project = {
+    return {
       files: {
         'index.html': markup,
         'index.js': jsSnippetContent
@@ -65,8 +49,6 @@ ${htmlSnippet.replace(/^/gm, '    ')}
       template: jsSnippet ? 'javascript' : 'html',
       tags: ['bootstrap']
     }
-
-    StackBlitzSDK.openProject(project, { openFile: 'index.html' })
   }
 </script>
 {{- end }}
