Use `:host` in selectors to support Web Components

--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -351,7 +351,7 @@ $enable-negative-margins:     false !default;
 $enable-deprecation-messages: true !default;
 $enable-important-utilities:  true !default;
 
-// Prefix for :root CSS variables
+// Prefix for :root, :host CSS variables
 
 $variable-prefix:             bs- !default; // Deprecated in v5.2.0 for the shorter `$prefix`
 $prefix:                      $variable-prefix !default;
