Special use case to handle images from Heroes example

--- a/site/layouts/partials/scripts.html
+++ b/site/layouts/partials/scripts.html
@@ -126,6 +126,9 @@ ${htmlSnippet.replace(/^/gm, '    ')}
       // Get HTML content
       let htmlContent = d.querySelector('body').innerHTML.replaceAll('"/docs/5.', '"https://getbootstrap.com/docs/5.')
 
+      // Special case to handle images in Heroes example
+      htmlContent = htmlContent.replaceAll('src="bootstrap-', 'src="https://getbootstrap.com/docs/5.2/examples/' + exampleRef + '/bootstrap-')
+
       const t = `<!doctype html>
 <html lang="en">
   <head>
